--- a/Core/androidbindingJar/build.gradle
+++ b/Core/androidbindingJar/build.gradle
@@ -8,6 +8,11 @@ buildscript {
   }
 }
 
+compileJava {
+    sourceCompatibility = JavaVersion.VERSION_1_7
+    targetCompatibility = JavaVersion.VERSION_1_7
+}
+
 version = 'v0.6.1000'
 
 apply plugin: 'com.github.johnrengelman.shadow'
